Fix overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body,
 #root {
   height: 100dvh;
   width: 100dvw;
+  overflow-x: hidden;
 }
 
 body {
